--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,6 +13,7 @@
     --primary-500: 225 80% 56%;
     --primary-foreground: 210 40% 98%;
     --secondary: 210 40% 96.1%;
+    --secondary-400: 218 18% 43%;
     --secondary-foreground: 222.2 47.4% 11.2%;
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
