--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,6 +15,7 @@
     --secondary: 210 40% 96.1%;
     --secondary-400: 218 18% 43%;
     --secondary-foreground: 222.2 47.4% 11.2%;
+    --information-500: 211 100% 66%;
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
     --accent: 210 40% 96.1%;
