feat: home page hero section full added

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,13 +9,13 @@
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
-    --primary: 222.2 47.4% 11.2%;
-    --primary-500: 225 80% 56%;
+    --primary: 225 80% 56%;
     --primary-foreground: 210 40% 98%;
-    --secondary: 210 40% 96.1%;
-    --secondary-400: 218 18% 43%;
+    --secondary: 218 18% 43%;
     --secondary-foreground: 222.2 47.4% 11.2%;
-    --information-500: 211 100% 66%;
+    --information: 211 100% 66%;
+    --information-foreground: 0 0% 100%;
+
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
     --accent: 210 40% 96.1%;
