feat: hero & filter section added

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,10 +12,11 @@
     --primary: 225 80% 56%;
     --primary-foreground: 210 40% 98%;
     --secondary: 218 18% 43%;
+    --secondary-300: 216 27% 66%;
+    --secondary-500: 220 26% 14%;
     --secondary-foreground: 222.2 47.4% 11.2%;
     --information: 211 100% 66%;
     --information-foreground: 0 0% 100%;
-
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
     --accent: 210 40% 96.1%;
