feat: detail page & list page changes added

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -102,3 +102,15 @@
 html {
   scroll-behavior: smooth;
 }
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  color: var(--primary);
+  font-size: 32px !important;
+}
+.swiper-button-next {
+  right: 0px !important;
+}
+.swiper-button-prev {
+  left: 0px !important;
+}
